Fix level 2 overflow issues

--- a/custom.css
+++ b/custom.css
@@ -9867,6 +9867,7 @@ main {
 .plotArea {
   width : 80vh;
   /*overflow : auto; will cause Darude Sandstorm if removed*/ 
+  overflow-y: scroll;
 }
 
 #svgContainer {
